# rocket-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: checks.yml
src/: errors.rs  lib.rs
src/api/: mod.rs  settings.rs
src/api/methods/: base.rs  channels.rs  chat.rs  mod.rs
